@@ -16,9 +16,7 @@ gnome_typing_monitor_SOURCES =			\
 	drw-utils.c				\
 	drw-utils.h				\
 	drw-selection.c				\
-	drw-selection.h				\
-	eggtrayicon.c				\
-	eggtrayicon.h
+	drw-selection.h
 
 gnome_typing_monitor_LDADD = @GNOME_LIBS@ @SCREENSAVER_LIBS@
 gnome_typing_monitor_LDFLAGS = -export-dynamic
