@@ -1,3 +1,12 @@
+2006-07-25  Vincent Untz <vuntz@gnome.org>
+
+	Fixes #348639
+
+	* Makefile.am:
+	* drwrigth.c: use GtkStatusIcon instead of libegg.
+
+	* eggtrayicon.c: removed.
+
 2006-01-09  Rodrigo Moya <rodrigo@novell.com>
 
 	Fixes #326141
